# MetaReads

./: .gitignore  Cargo.toml  README.md  dfx.json  package.json
src/MetaReads_AI/: Dockerfile  test.py
src/MetaReads_backend/: Cargo.toml  MetaReads_backend.did
src/MetaReads_backend/src/: lib.rs
src/MetaReads_backend/src/author/: lib.rs  model.rs
src/MetaReads_backend/src/book/: lib.rs  model.rs
src/MetaReads_backend/src/comment/: lib.rs  model.rs
src/MetaReads_backend/src/error/: error.rs
src/MetaReads_backend/src/genre/: lib.rs  model.rs
src/MetaReads_backend/src/helper/: helper.rs
src/MetaReads_backend/src/plan/: lib.rs  model.rs
src/MetaReads_backend/src/read/: lib.rs  model.rs
src/MetaReads_backend/src/seed/: lib.rs
src/MetaReads_backend/src/subscription/: lib.rs  model.rs
src/MetaReads_backend/src/user/: lib.rs  model.rs
src/MetaReads_frontend/: firebase.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json
src/MetaReads_frontend/public/: .ic-assets.json5
src/MetaReads_frontend/src/: App.tsx  index.css  main.tsx
src/MetaReads_frontend/src/components/Book/: BookCard.tsx  BookCardImageFocused.tsx  BookDetail.tsx  BookItem.tsx
src/MetaReads_frontend/src/components/Layout/: BaseLayout.tsx  (+1 more)
src/MetaReads_frontend/src/lib/: collapsed_provider.tsx  theme-provider.tsx  user_provider.tsx
src/MetaReads_frontend/src/page/: BookDetailPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  ReadPage.tsx  RegisterPage.tsx  StorePage.tsx  SubscriptionPage.tsx  Testing.tsx
src/MetaReads_frontend/src/routes/: AppRouter.tsx
(+110 files in other folders)
