[package]
name = "MetaReads_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ciborium = "0.2.2"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validator = { version = "0.14", features = ["derive"] }
